Add buttons and forms

--- a/hiking/react-hiking/src/App.css
+++ b/hiking/react-hiking/src/App.css
@@ -13,7 +13,7 @@
   }
 }
 
-.App-header {
+/* .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -22,26 +22,26 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+} */
 
 .App-link {
-  color: #61dafb;
+  color: #0eb3e0;
 }
 
-@keyframes App-logo-spin {
+/* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
-}
+} */
 
 
 body, html {
-  margin: 0;
+  margin: 0%;
   font-family: sans-serif;
-  background-color: lightblue;
+  background-color: rgb(243, 248, 249);
 }
 
 .content {
