--- a/hiking/react-hiking/src/App.css
+++ b/hiking/react-hiking/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color: #DDF7E3;
 }
 
 .App-logo {
@@ -38,7 +39,7 @@
 } */
 
 
-body, html {
+/* body, html {
   margin: 0%;
   font-family: sans-serif;
   background-color: rgb(243, 248, 249);
@@ -73,4 +74,4 @@ td {
 
 #content {
   width: 70%;
-}
+} */
