--- a/hiking/react-hiking/src/stylesheets/Body.css
+++ b/hiking/react-hiking/src/stylesheets/Body.css
@@ -7,6 +7,5 @@
     padding: 1em;
     margin-bottom: 2em;
     border:darkgreen;
-    background-color: rgb(113, 159, 59);
-    color: #fff;
+    background-color: #DDF7E3;
   }
