Add login and logout

--- a/hiking/react-hiking/src/views/components/Title.css
+++ b/hiking/react-hiking/src/views/components/Title.css
@@ -17,5 +17,9 @@
     margin-left: auto;
     margin-right: auto;
     background-color: #5D9C59;
-    color: #fff;
+    color: #ffffff;
   }
+
+  .Logo {
+    width: 40%;
+ }
