--- a/hiking/react-hiking/src/App.css
+++ b/hiking/react-hiking/src/App.css
@@ -14,64 +14,6 @@
   }
 }
 
-/* .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-} */
-
 .App-link {
-  color: #0eb3e0;
+  color: #5D9C59;
 }
-
-/* @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
-
-
-/* body, html {
-  margin: 0%;
-  font-family: sans-serif;
-  background-color: rgb(243, 248, 249);
-}
-
-.content {
-  margin: 0 auto;
-  width: 400px;
-}
-
-table, td, th {
-  border: 1px solid #aaa;
-}
-
-table {
-  border-collapse: collapse;
-  width: 100%;
-}
-
-th {
-  height: 30px;
-}
-
-td {
-  text-align: center;
-  padding: 5px;
-}
-
-.form {
-  margin-top: 20px;
-}
-
-#content {
-  width: 70%;
-} */
