--- a/hiking/react-hiking/src/views/pages/ProfilePage.css
+++ b/hiking/react-hiking/src/views/pages/ProfilePage.css
@@ -1,9 +1,14 @@
-
-
 .add-album {
   margin: 0;
   position: absolute;
   top: 50%;
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
+  left: 50%;
+  -ms-transform: translateY(-50%) translateX(-50%);
+  transform: translateY(-50%) translateX(-50%);
+}
+
+.album-cover img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
