Populate AlbumModal on Home

--- a/hiking/react-hiking/src/views/components/AlbumsModal.css
+++ b/hiking/react-hiking/src/views/components/AlbumsModal.css
@@ -99,3 +99,8 @@ img {
     padding: 10px;
     display: block;
   }
+
+.albumList {
+    max-height: 200px; /* Set the desired maximum height */
+    overflow-y: auto; /* Enable vertical scrolling if needed */
+}
