--- a/hiking/react-hiking/src/views/pages/LocalAuthenticate.css
+++ b/hiking/react-hiking/src/views/pages/LocalAuthenticate.css
@@ -1,40 +1,59 @@
-.auth-form-container, .login-form, .register-form {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  @media screen and (min-width: 600px) {
-    .auth-form-container {
-      padding: 5rem;
-      border: 1px solid white;
-      border-radius: 10px;
-      margin: 0.5rem;
-    }
-  }
-  
-  label {
-    text-align: left;
-    padding: 0.25rem 0;
-  }
-  
-  input {
-    margin: 0.5rem 0;
-    padding: 1rem;
-    border: none;
+.auth-form-container,
+.login-form,
+.register-form {
+  display: flex;
+  flex-direction: column;
+}
+
+@media screen and (min-width: 600px) {
+  .auth-form-container {
+    padding: 5rem;
+    border: 1px solid white;
     border-radius: 10px;
+    margin: 0.5rem;
   }
-  
-  button {
-    border: none;
-    background-color: #5D9C59;
-    padding: 20px;
-    border-radius: 10px;
-    cursor: pointer;
-    color: #edeaf2;
-  }
-  
-  .link-btn {
-    background: none;
-    color: #5D9C59;
-    text-decoration: underline;
-  }
+}
+
+label {
+  text-align: left;
+  padding: 0.25rem 0;
+}
+
+input {
+  margin: 0.5rem 0;
+  padding: 1rem;
+  border: none;
+  border-radius: 10px;
+}
+
+button {
+  border: none;
+  background-color: #5D9C59;
+  padding: 20px;
+  border-radius: 10px;
+  cursor: pointer;
+  color: #edeaf2;
+}
+
+.link-btn {
+  background: none;
+  color: #5D9C59;
+  text-decoration: underline;
+}
+
+.login-buttons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.g_id_signin {
+  margin-top: 10px;
+}
+
+.auth-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
