--- a/hiking/react-hiking/src/views/pages/HomePage.css
+++ b/hiking/react-hiking/src/views/pages/HomePage.css
@@ -23,3 +23,10 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+.home-loading-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; 
+}
