Added loading to directions

--- a/hiking/react-hiking/src/views/components/Directions/Directions.css
+++ b/hiking/react-hiking/src/views/components/Directions/Directions.css
@@ -4,15 +4,9 @@
     margin: 0 auto; /* Center the map horizontally */
   }
 
-
-  .expanded-content {
-    display: block;
-  }
-  
-  .expanded-content.expanded {
-    display: block;
-  }
-  
-  .expanded-content:not(.expanded) {
-    display: none;
-  }
+.loading-directions{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px; 
+}
